--- a/src/main/resources/templates/detail_Salarie.html
+++ b/src/main/resources/templates/detail_Salarie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>Gestion des salariés</title>
@@ -20,7 +20,7 @@
                 <li><a href="http://localhost:8080/salaries?page=0&amp;size=10&amp;sortProperty=nom&amp;sortDirection=ASC" class="nav-link">Liste des salariés <span class="badge badge-primary">26</span></a></li>
             </ul>
 
-            <form class="form-inline my-2 my-lg-0" role="search" action="http://localhost:8080/salaries" method="GET">
+            <form class="form-inline my-2 my-lg-0" role="search" th:action="@{http://localhost:8080/salaries/recherche}" method="GET">
                 <div class="form-group form-inline">
                     <input name="nom" class="form-control" placeholder="Rechercher un nom" type="text">
                 </div>
@@ -35,22 +35,22 @@
 
     <h2>Détail du salarié</h2>
     
-    <form id="saveForm" action="http://localhost:8080/salaries/aide/10" method="post" class="row">
+    <form id="saveForm" th:action="${salarie} != null ? @{/salaries/{idt}(idt=${salarie.getId()})} : @{http://localhost:8080/salaries/aide/save}" method="post" class="row">
 
         <div class="col-lg-6">
             <div class="form-group">
                 <label class="form-control-label" for="id">ID</label>
-                <input type="text" value="10" class="form-control" name="id" id="id" disabled="true">
+                <input type="text" th:value="${salarie} ? ${salarie.getId()} : ''" class="form-control" name="id" id="id" disabled="true">
 
                 <label class="form-control-label" for="nom">Nom</label>
-                <input type="text" value="Jean Dupont" class="form-control" name="nom" id="nom">
+                <input type="text" th:value="${salarie} ? ${salarie.getNom()}:'entrer le nom'" class="form-control" name="nom" id="nom">
 
                 <label class="form-control-label" for="nom">moisEnCours</label>
-                <input type="date" value="03/2023" class="form-control" name="moisEnCours"
+                <input type="date" th:value="${salarie} ? ${salarie.getMoisEnCours()}:'entrer le mois encours'" class="form-control" name="moisEnCours"
                        id="moisEnCours">
 
                 <label class="form-control-label" for="nom">moisDebutContrat</label>
-                <input type="date" value="08/2022" class="form-control" name="moisDebutContrat" id="moisDebutContrat">
+                <input type="date" th:value="${salarie} ? ${salarie.getMoisDebutContrat()}:'entrez le mois debut de contrat'" class="form-control" name="moisDebutContrat" id="moisDebutContrat">
             </div>
         </div>
 
@@ -60,7 +60,7 @@
                 <div>
                     <label class="form-control-label" for="nom">joursTravaillesAnneeN</label>
                     <div class="input-group">
-                        <input type="number" step="0.5" value="20" class="form-control" name="joursTravaillesAnneeN" id="joursTravaillesAnneeN">
+                        <input type="number" step="0.5" th:value="${salarie} ? ${salarie.getJoursTravaillesAnneeN()}:'entrez le nombre de jours travaillé année N'" class="form-control" name="joursTravaillesAnneeN" id="joursTravaillesAnneeN">
                         <div class="input-group-append">
                             <span class="input-group-text">j</span>
                         </div>
@@ -70,7 +70,7 @@
                 <div>
                     <label class="form-control-label" for="nom">congesPayesAcquisAnneeN</label>
                     <div class="input-group">
-                        <input type="number" step="0.5" value="2.5" class="form-control" name="congesPayesAcquisAnneeN" id="congesPayesAcquisAnneeN">
+                        <input type="number" step="0.5" th:value="${salarie} ? ${ salarie.getCongesPayesAcquisAnneeN()} : '0'" class="form-control" name="congesPayesAcquisAnneeN" id="congesPayesAcquisAnneeN">
                     <div class="input-group-append">
                         <span class="input-group-text">j</span>
                     </div>
@@ -84,7 +84,7 @@
             <div>
                 <label class="form-control-label" for="nom">joursTravaillesAnneeNMoins1</label>
                 <div class="input-group">
-                    <input type="number" step="0.5" value="80" class="form-control" name="joursTravaillesAnneeNMoins1" id="joursTravaillesAnneeNMoins1">
+                    <input type="number" step="0.5" th:value="${salarie} ? ${salarie.getJoursTravaillesAnneeNMoins1()} : '0'" class="form-control" name="joursTravaillesAnneeNMoins1" id="joursTravaillesAnneeNMoins1">
                     <div class="input-group-append">
                         <span class="input-group-text">j</span>
                     </div>
@@ -94,7 +94,7 @@
             <div>
                 <label class="form-control-label" for="nom">congesPayesAcquisAnneeNMoins1</label>
                 <div class="input-group">
-                    <input type="number" step="0.5" value="10" class="form-control" name="congesPayesAcquisAnneeNMoins1" id="congesPayesAcquisAnneeNMoins1">
+                    <input type="number" step="0.5" th:value="${salarie} ? ${salarie.getCongesPayesAcquisAnneeNMoins1()} : '0'" class="form-control" name="congesPayesAcquisAnneeNMoins1" id="congesPayesAcquisAnneeNMoins1">
                     <div class="input-group-append">
                         <span class="input-group-text">j</span>
                     </div>
@@ -104,7 +104,7 @@
             <div>
                 <label class="form-control-label" for="nom">congesPayesPrisAnneeNMoins1</label>
                 <div class="input-group">
-                    <input type="number" step="0.5" value="4" class="form-control" name="congesPayesPrisAnneeNMoins1" id="congesPayesPrisAnneeNMoins1">
+                    <input type="number" step="0.5" th:value="${salarie} ? ${salarie.getCongesPayesPrisAnneeNMoins1()}:'0' " class="form-control" name="congesPayesPrisAnneeNMoins1" id="congesPayesPrisAnneeNMoins1">
                     <div class="input-group-append">
                         <span class="input-group-text">j</span>
                     </div>
@@ -125,7 +125,7 @@
     <div class="row mt-2">
         <div class="col-lg-6">
             <input form="saveForm" class="btn btn-primary" type="submit" value="Enregistrer">
-            <a href="/salaries/10/delete" class="btn btn-danger">Supprimer</a>
+            <a th:href="${salarie}?@{/salaries/delete/{id}(id=${salarie.getId()})}" class="btn btn-danger">Supprimer</a>
         </div>
     </div>
 
