--- a/src/main/resources/templates/detail_Salarie.html
+++ b/src/main/resources/templates/detail_Salarie.html
@@ -17,7 +17,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li><a href="http://localhost:8080/salaries?page=0&amp;size=10&amp;sortProperty=nom&amp;sortDirection=ASC" class="nav-link">Liste des salariés <span class="badge badge-primary">26</span></a></li>
+                <li><a href="http://localhost:8080/salaries?page=0&amp;size=10&amp;sortProperty=nom&amp;sortDirection=ASC" class="nav-link">Liste des salariés <span class="badge badge-primary"></span></a></li>
             </ul>
 
             <form class="form-inline my-2 my-lg-0" role="search" th:action="@{http://localhost:8080/salaries/recherche}" method="GET">
